@@ -5,6 +5,7 @@ Changes since 2.4.16:
 
 Lib/
 * New convenience function ldap.dn.is_dn()
+* New convenience function ldap.escape_str()
 
 Modules/
 
@@ -1107,4 +1108,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.320 2014/05/20 20:15:15 stroeder Exp $
+$Id: CHANGES,v 1.321 2014/05/20 20:27:55 stroeder Exp $
